data/all_generated_tests/raw_wast_tests/br_InfiniteLoops_415.wast
;; 6. **Test Description 6:**    - Use a deeply nested loop with mixed control instructions (`block`, `if`, `loop`) where a `br` targets a `block` from within a nested loop, but fails due to improper stack unwinding, causing the loop to repeat.    - **Constraint: Stack Polymorphism**    - **Relation to Infinite Loop:** Stack unwinding errors lead to infinite looping.

(assert_invalid
  (module
    (func $deeply_nested_block_loop_issue
      (block
        (loop
          (block
            (block
              (br 0)
            )
            (drop)
          )
          (drop)
        )
      )
    )
  )
  "stack unwinding issue causes infinite loop"
)